<resources>
    <string name="app_name">开心网</string>
    <string name="app_name_titlebar">开心网</string>
    <string name="start_com">Copyright © 2007–2014 kaixin001.com</string>
    <string name="start_right">All rights reserved. Ver 3.9.9</string>
    <string name="start_dataerr">数据加载失败</string>
    <string name="load_photo_error">加载照片失败</string>
    <string name="access_token_overdue">您的令牌已过期，请退出后重新登录</string>
    <string name="login_id">账号</string>
    <string name="login_pwd">密码</string>
    <string name="login_auto">记住密码</string>
    <string name="login_btn">登录</string>
    <string name="enroll_btn">注册</string>
    <string name="registration_way">注册方式</string>
    <string name="forget_pwd_way">通过以下方式</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_just_have_a_look">随便看看</string>
    <string name="guide_title_1">QQ帐号登录</string>
    <string name="guide_title_2">分享照片</string>
    <string name="guide_title_3">加好友</string>
    <string name="guide_title_4">添加关注</string>
    <string name="guide_title_5">发送好友请求</string>
    <string name="guide_description_1">分享精彩内容到腾讯微博和QQ空间</string>
    <string name="guide_description_2">便捷的一键式照片批量上传至开心网</string>
    <string name="guide_description_3">从导航直接加好友，发现更多你可能认识的人</string>
    <string name="chat_inputting">正在输入…</string>
    <string name="chat_maximuminput">输入内容最多200字</string>
    <string name="chat_current_text">可能由于网络原因，刚才的消息 \"</string>
    <string name="chat_send_failure">\" 发送失败</string>
    <string name="chat_re_send">重新发送</string>
    <string name="kxyt_friend">可能认识的好友</string>
    <string name="kxyt_star">公共主页</string>
    <string name="my_friends">我的好友</string>
    <string name="login_proccessing">正在登录……</string>
    <string name="login_checknetwork">正在检查网络…</string>
    <string name="login_check_msg">"使用开心网客户端你可以：
1.查看好友动态
2.浏览好友首页,查看好友的照片
3.查看好友的转帖,参与投票
4.更新状态,分享照片
5.写记录、发表新日记
6.及时的查看和回复各类开心消息
7.方便快捷的访问各类组件"</string>
    <string name="not_support_install_flash">你的手机不支持Flash插件</string>
    <string name="please_install_flash">你的手机未安装Flash插件，暂不支持视频播放</string>
    <string name="open_video_failed">无法加载视频</string>
    <string name="login_check_login">立刻开始体验</string>
    <string name="login_check_regist">注册开心网账号</string>
    <string name="logout_proccessing">正在注销……</string>
    <string name="logout_hint">确定注销登录吗？</string>
    <string name="only_one">一</string>
    <string name="record_repost2">转发</string>
    <string name="record_comment2">评论</string>
    <string name="record_repost1">条转发</string>
    <string name="news_refresh_failed">获取数据失败</string>
    <string name="get_circle_member_failed_no_permisssion">你已经退出该圈子，无法查看圈子成员</string>
    <string name="get_circle_news_failed_no_permisssion">你已经退出该圈子，无法查看圈子动态</string>
    <string name="news_postup_failed">请求失败，你是否已赞过了?</string>
    <string name="network_err">网络通信错误</string>
    <string name="dataparse_err">数据解析失败</string>
    <string name="loading">正在载入...</string>
    <string name="ok">确定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="he">他</string>
    <string name="she">她</string>
    <string name="crash_error">由于手机内存等原因，开心网客户端将重新运行</string>
    <string name="no_network">开心网应用需要网络连接，请检查网络状态</string>
    <string name="unsupport_network">当前网络无法连接服务器，请检查网络状态</string>
    <string name="login_id_empty">请输入你的开心网账号</string>
    <string name="login_pwd_empty">请输入你的开心网密码</string>
    <string name="desktop_item_news">动态</string>
    <string name="desktop_item_message_center">消息</string>
    <string name="desktop_item_talk">聊天</string>
    <string name="desktop_item_friend">好友</string>
    <string name="desktop_item_photo">照片</string>
    <string name="desktop_item_share_photo">分享照片</string>
    <string name="desktop_item_write_record">写记录</string>
    <string name="desktop_item_read_shared_post">看转帖</string>
    <string name="desktop_exit_hint">再按一次返回键，可直接退出程序</string>
    <string name="desktop_title_push_picture">发照片</string>
    <string name="desktop_item_add_friends">加好友</string>
    <string name="desktop_item_circles">圈子</string>
    <string name="desktop_item_position">附近</string>
    <string name="last_update_time">最后更新</string>
    <string name="news">动态</string>
    <string name="news_has_new">新</string>
    <string name="news_all">全部</string>
    <string name="news_important">重要</string>
    <string name="news_photo">照片</string>
    <string name="news_state">状态</string>
    <string name="news_star">公共主页</string>
    <string name="news_nonews">目前没有好友动态</string>
    <string name="post_nonews">目前没有好友转帖</string>
    <string name="post_nohotnews">目前没有热门转帖</string>
    <string name="news_nophoto">目前没有好友照片更新</string>
    <string name="news_nostate">目前没有好友状态更新</string>
    <string name="news_nostar">目前你还没有加任何公共主页</string>
    <string name="news_more">查看更多动态…</string>
    <string name="news_refresh">加载新动态</string>
    <string name="news_diary_pwd">此日记凭密码访问</string>
    <string name="news_state_hint">你正在做什么？</string>
    <string name="input_submit">提交</string>
    <string name="share_not_support">暂不支持此文件类型</string>
    <string name="share_content_length_error">内容不能超过140个字符</string>
    <string name="input_release">发布</string>
    <string name="input_publish">发表</string>
    <string name="input_title_comment">评论</string>
    <string name="input_title_record">写记录</string>
    <string name="share_horoscope">分享运势</string>
    <string name="input_title_state">编辑个性签名</string>
    <string name="input_title_photo">输入照片标题</string>
    <string name="input_title_repost_tag">输入新标签词</string>
    <string name="input_your_comment">请添加你的评论</string>
    <string name="input_submiting">正在提交…</string>
    <string name="input_releasing">正在发布…</string>
    <string name="input_publishing">正在发表…</string>
    <string name="input_replying">正在回复…</string>
    <string name="input_submit_failed">提交失败</string>
    <string name="record_submit_duplicated">请不要连续发重复内容</string>
    <string name="input_feedback_failed">反馈提交失败</string>
    <string name="input_release_failed">发布失败</string>
    <string name="input_reply_failed">回复失败</string>
    <string name="input_comment_failed">发表评论失败</string>
    <string name="input_repost_tag_failed">新标签词发表失败</string>
    <string name="input_failed_no_circle_permission">"回复失败
你已经退出该圈子"</string>
    <string name="input_submit_suc">提交成功</string>
    <string name="input_feedback_suc">反馈提交成功</string>
    <string name="input_release_suc">发布成功</string>
    <string name="input_reply_suc">回复成功</string>
    <string name="input_comment_suc">发表评论成功</string>
    <string name="input_cancel_hint">你确定要取消吗？</string>
    <string name="input_state_empty">状态信息不能为空</string>
    <string name="input_tag_min">至少输入5个字符</string>
    <string name="input_record_empty">记录内容不能为空</string>
    <string name="input_reply_empty">回复内容不能为空</string>
    <string name="input_comment_empty">评论内容不能为空</string>
    <string name="input_repost_tag_empty">观点不能为空</string>
    <string name="input_feedback_empty">反馈内容不能为空</string>
    <string name="input_repost_tag_max">标签词最多能输入16个汉字</string>
    <string name="input_comment_whisper">悄悄话</string>
    <string name="friends_all">全部</string>
    <string name="friends_online">在线</string>
    <string name="friends_visitor">来访</string>
    <string name="friends_star">公共主页</string>
    <string name="friends_online_num">位好友在线</string>
    <string name="friends_star_num">你加了*个公共主页</string>
    <string name="friends_input_find">输入拼音首字母查找</string>
    <string name="friends_select_title">选好友</string>
    <string name="friends_select_limited">最多只能选择30位好友!</string>
    <string name="friends_at_title">选择要提到的人</string>
    <string name="objcomment_close">对方关闭了评论功能</string>
    <string name="objcomment_title_like">赞</string>
    <string name="objcomment_title_like_with">和</string>
    <string name="objcomment_title_like_others">等</string>
    <string name="objcomment_title_like_person">个人</string>
    <string name="objcomment_title_like_state">觉得这个挺赞的</string>
    <string name="objcomment_empty">目前没有评论或者都是悄悄话评论</string>
    <string name="objcomment_error">下载评论失败</string>
    <string name="objcomment_newtime">0秒前</string>
    <string name="objcomment_nolike">还没人赞过</string>
    <string name="objcomment_input_comment">说点什么吧</string>
    <string name="albumview_pwd">请输入密码</string>
    <string name="albumview_pwd_verify">正在验证…</string>
    <string name="albumview_pwd_verify_failed">验证失败</string>
    <string name="photoview_getlist_failed">获取照片列表失败</string>
    <string name="photoview_getlist_data_error">照片专辑已删除或不允许查看</string>
    <string name="albumview_no_data">该专辑下没有照片</string>
    <string name="photoview_downloading">正在下载…</string>
    <string name="photoview_download_failed">下载失败</string>
    <string name="photoview_album">查看专辑</string>
    <string name="photoview_title_pic_operation">请选择</string>
    <string name="save_success">保存成功</string>
    <string name="save_picture_success">图片已成功保存</string>
    <string name="save_failed">保存失败</string>
    <string name="set_wallpaper_success">设置成功</string>
    <string name="set_wallpaper_failed">设置失败</string>
    <string name="album_pictotal">张照片</string>
    <string name="new_message_notice">新消息</string>
    <string name="home_info">资料</string>
    <string name="home_nonews">目前没有动态</string>
    <string name="home_noalbum">*还没有创建照片专辑</string>
    <string name="home_album_pictotal">有*张照片</string>
    <string name="home_album_total">个专辑</string>
    <string name="home_no_baseinfo">没有个人资料</string>
    <string name="home_baseinfo">基本信息</string>
    <string name="home_otherinfo">其他信息</string>
    <string name="home_privacy_info">由于对方的隐私设置，你没有权限查看他的动态</string>
    <string name="home_hide_info">的个人主页目前处于隐藏状态</string>
    <string name="home_option_title">请选择</string>
    <string name="modify_header">修改头像</string>
    <string name="header_undownloaded">头像尚未下载完成，请稍候</string>
    <string name="home_newfriend_sending">正在发送好友请求…</string>
    <string name="home_newfriend_sendfailed">好友请求发送失败</string>
    <string name="home_verify_empty">好友请求附言不能为空</string>
    <string name="home_delstar_suc">断开粉丝成功</string>
    <string name="home_delstar_failed">断开粉丝失败</string>
    <string name="continue_action">继续</string>
    <string name="info_gender">性别</string>
    <string name="info_birthday">出生日期</string>
    <string name="info_constellation">星座</string>
    <string name="info_hometown">家乡</string>
    <string name="info_city">现居住地</string>
    <string name="info_mobile">手机</string>
    <string name="info_tel">宅电</string>
    <string name="info_qq">QQ</string>
    <string name="info_msn">MSN</string>
    <string name="info_address">地址</string>
    <string name="info_zip">邮编</string>
    <string name="info_interest">兴趣爱好</string>
    <string name="info_education">教育背景</string>
    <string name="info_career">工作经历</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="face">表情</string>
    <string name="private_shared_post_cannot_repaste">私藏内容不能转帖给好友</string>
    <string name="possession_shared_post_cannot_interactive">私藏内容不能参与互动</string>
    <string name="message_center_short_message">短消息</string>
    <string name="message_center_system_message">系统消息</string>
    <string name="message_center_comment">评论</string>
    <string name="message_center_reply_comment">评论回复</string>
    <string name="message_center_received_user_comment">留言</string>
    <string name="cloud_album_setting_name">云存储设置</string>
    <string name="cloud_album_setting_network_name">Wi-Fi自动同步</string>
    <string name="cloud_album_setting_wifi_sync">将照片同步至网络私密相册</string>
    <string name="cloud_album_setting_content_name">照片同步设置</string>
    <string name="horoscope_setting_name">运势设置</string>
    <string name="horoscope_setting_push_off">关闭运势推送</string>
    <string name="horoscope_setting_push_on">开启运势推送</string>
    <string name="horoscope_setting_push_title">推送运势信息</string>
    <string name="horoscope_setting_choose_title">设置我的星座</string>
</resources>